--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -12,7 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <NoWarn>SA1633;SA0001;SA1309;SA1101;SA1600</NoWarn>
+    <NoWarn>SA1633;SA0001;SA1309;SA1101;SA1600;SA1200</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -44,11 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
+    <Compile Include="Aviary.cs" />
+    <Compile Include="Cats.cs" />
+    <Compile Include="Gorilla.cs" />
+    <Compile Include="Lion.cs" />
+    <Compile Include="Monkey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tiger.cs" />
+    <Compile Include="Сhimpanzee.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
