--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
+    <Compile Include="AnimalsKind.cs" />
     <Compile Include="Aviary.cs" />
     <Compile Include="Cats.cs" />
     <Compile Include="Gorilla.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Monkey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Starter.cs" />
     <Compile Include="Tiger.cs" />
     <Compile Include="Сhimpanzee.cs" />
   </ItemGroup>
