--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -45,17 +45,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
-    <Compile Include="AnimalsKind.cs" />
+    <Compile Include="Enums\AnimalsKind.cs" />
     <Compile Include="Aviary.cs" />
-    <Compile Include="Cats.cs" />
-    <Compile Include="Gorilla.cs" />
-    <Compile Include="Lion.cs" />
-    <Compile Include="Monkey.cs" />
+    <Compile Include="Animals\Cats.cs" />
+    <Compile Include="Animals\Gorilla.cs" />
+    <Compile Include="Interfaces\IGetAnimals.cs" />
+    <Compile Include="Interfaces\IPrintAviary.cs" />
+    <Compile Include="Animals\Lion.cs" />
+    <Compile Include="Animals\Monkey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Starter.cs" />
-    <Compile Include="Tiger.cs" />
-    <Compile Include="Сhimpanzee.cs" />
+    <Compile Include="Animals\Tiger.cs" />
+    <Compile Include="Animals\Сhimpanzee.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
