implement ICountedAnimals in Aviary class

--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Aviary.cs" />
     <Compile Include="Animals\Cats.cs" />
     <Compile Include="Animals\Gorilla.cs" />
+    <Compile Include="Interfaces\ICountedAnimals.cs" />
     <Compile Include="Interfaces\IGetAnimals.cs" />
     <Compile Include="Interfaces\IPrintAviary.cs" />
     <Compile Include="Animals\Lion.cs" />
