In extended method added interface IGetAnimals like in-param

--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Aviary.cs" />
     <Compile Include="Animals\Cats.cs" />
     <Compile Include="Animals\Gorilla.cs" />
+    <Compile Include="Enums\MainFood.cs" />
+    <Compile Include="Extentions\Find.cs" />
     <Compile Include="Interfaces\ICountedAnimals.cs" />
     <Compile Include="Interfaces\IGetAnimals.cs" />
     <Compile Include="Interfaces\IPrintAviary.cs" />
