--- a/Module2_HW4_02062023/Module2_HW4_02062023.csproj
+++ b/Module2_HW4_02062023/Module2_HW4_02062023.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interfaces\IPrintAviary.cs" />
     <Compile Include="Animals\Lion.cs" />
     <Compile Include="Animals\Monkey.cs" />
+    <Compile Include="Interfaces\ISortByWeight.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Starter.cs" />
